--- a/medconnect/stylesdraft.css
+++ b/medconnect/stylesdraft.css
@@ -3,6 +3,9 @@
 
 * {
     box-sizing: border-box;
+    font-family:'IBM Plex Sans Condensed', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 body {
     margin: 0;
@@ -100,7 +103,6 @@ header nav a[href="#loginpage"] {
 }
 h1 {
     color: rgba(215, 215, 215, 1);
-    font-family:'IBM Plex Sans Condensed', sans-serif;
     font-size: 2vw; 
     white-space: nowrap;
     font-weight: 200;
@@ -108,7 +110,7 @@ h1 {
 
 .hg1{
     z-index: 2;
-    top: 11%;
+    top: 15%;
     left: 50%;
     position: absolute;
     text-align: center;
@@ -123,17 +125,26 @@ h1 {
     margin-top: 1%;
 }
 
+.hg4{
+    text-align: left;
+    margin: 2vh 0 0 6.4vw;
+}
+
+.hg5{
+    text-align: left;
+    margin-left: 6.4vw;
+}
+
 h2{
     color: rgba(215, 215, 215, 1);
-    font-family:'IBM Plex Sans Condensed', sans-serif;
     font-size: 0.8vw;
     letter-spacing: 1.0001px;
     font-weight: 100;
     line-height: 2.5vh;
 }
+
 p {
     color: rgba(215, 215, 215, 1);
-    font-family:'IBM Plex Sans Condensed', sans-serif;
     font-size: 1.3vw; 
     word-spacing: 0.2em;
     white-space: normal;
@@ -145,7 +156,7 @@ p {
     position: absolute;
     text-align: center; top: 50%;
     left: 50%;
-    top: 45%;
+    top: 50%;
     transform: translate(-50%, -50%);
     max-width: 100%; /* Set a maximum width if necessary */
     z-index: 2;
@@ -251,4 +262,21 @@ h2 a {
 h2 a:hover {
     text-decoration: underline; /* Add underline on hover */
     /* Additional styling for hover state if needed */
+}
+
+input{
+    background-color: #181818;
+    border: solid 1.5px #585858;
+    color: #D7D7D7;
+    padding-left: 15px;
+    border-radius: 10px;
+    margin-left: 6vh;
+    height: 45px;
+}
+
+.labelline{
+    color: #D7D7D7;
+    font-size: 0.8vw;
+    margin-bottom: 1vh;
+    margin-left: 3.3vw;
 }
