--- a/medconnect/stylesdraft.css
+++ b/medconnect/stylesdraft.css
@@ -106,6 +106,7 @@ h1 {
     font-size: 2vw; 
     white-space: nowrap;
     font-weight: 200;
+    min-height: 20px;
 }
 
 .hg1{
@@ -132,7 +133,7 @@ h1 {
 
 .hg5{
     text-align: left;
-    margin-left: 6.4vw;
+    margin-left: 6.7vw;
 }
 
 h2{
@@ -272,11 +273,85 @@ input{
     border-radius: 10px;
     margin-left: 6vh;
     height: 45px;
+    font-style: italic;
 }
-
+.name{
+    width: 200px;
+}
+.rest{
+    width: 456px;
+}
 .labelline{
     color: #D7D7D7;
     font-size: 0.8vw;
     margin-bottom: 1vh;
     margin-left: 3.3vw;
+    margin-top: 3vh;
+}
+
+.plus{
+    color:#00A72F;
+    font-size: 60vh;
+    font-weight: 900;
+    margin: 0;
+    margin-top: -55%;
+}
+
+.rightsideofregister{
+    margin-left: 30vw;
+    text-align: center;
+    margin-bottom: 0;
+}
+select{
+    appearance: none;
+}
+.inputboxname{
+    background-color: #181818;
+    border: solid 1.5px #585858;
+    color: #D7D7D7;
+    padding-left: 15px;
+    border-radius: 10px;
+    margin-left: 6vh;
+    height: 45px;
+    font-style: italic;
+    width: 456px;
+    background-image:
+        linear-gradient(45deg, transparent 50%, gray 50%),
+        linear-gradient(135deg, gray 50%, transparent 50%),
+        linear-gradient(to right, gray 50%, gray 50%);
+    background-position:
+        calc(100% - 20px) calc(1em + 6px),
+        calc(100% - 15px) calc(1em + 6px),
+        calc(100% - 3em) 0.85em;
+    background-size:
+        5px 5px,
+        5px 5px,
+        1px 1.5em;
+    background-repeat: no-repeat;
+}
+select.inputboxname:focus {
+    background-image:
+      linear-gradient(45deg, #00A72F 50%, transparent 50%),
+      linear-gradient(135deg, transparent 50%, #00A72F 50%),
+      linear-gradient(to right, #00A72F, #00A72F);
+    background-position:
+      calc(100% - 15px) calc(1em + 6px),
+      calc(100% - 20px) calc(1em + 6px),
+      calc(100% - 3em) 0.85em;
+    background-size:
+      5px 5px,
+      5px 5px,
+      1px 1.5em;
+    background-repeat: no-repeat;
+    border-color: green;
+    outline: 0;
+  }
+
+  select:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
+  }
+  
+select:hover{
+    box-shadow: rgba(0, 0, 0, 0);
 }
