--- a/medconnect/styles.css
+++ b/medconnect/styles.css
@@ -12,10 +12,35 @@ nav {
 form {
     border: 3px solid #f1f1f1;
   }
+
+label {
+    display: inline-block;
+    margin-bottom: 8px;
+}  
   
   /* Full-width inputs */
   input[type=text], input[type=password] {
     width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+
+  input[type="checkbox"] {
+    width: 16px;
+    height: 16px;
+    border: 2px solid #333;
+    border-radius: 2px;
+    display: inline-block;
+    
+}
+
+  /* not full-width inputs */
+
+  .input1 {
+    width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -33,7 +58,15 @@ form {
     cursor: pointer;
     width: 100%;
   }
-  
+
+  h2 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+} 
   /* Add a hover effect for buttons */
   button:hover {
     opacity: 0.8;
