--- a/medconnect/stylesdraft.css
+++ b/medconnect/stylesdraft.css
@@ -438,8 +438,9 @@ select:hover{
 
 .accepting {
     color: #b1b1b1;
-    font-size: 0.8vw;
+    font-size: 0.6vw;
     margin-top: 10px;
+    margin-left: 5vw;
 }
 .checklist-title{
     color: #828282;
@@ -475,8 +476,7 @@ select:hover{
     content: '\f00c';
     font-family: FontAwesome;
     margin-right: 8px;
-    margin-left: -30px;
-    display: inline-block;
+    margin-left: -20px;
     font-size: 0.6vw;
     color: #00A72F;
 }
