--- a/medconnect/stylesdraft.css
+++ b/medconnect/stylesdraft.css
@@ -17,6 +17,17 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+.logbody {
+    margin: 0;
+    padding: 0;
+    background-image: url("signinbg.jpg")!important;
+    background-size: cover;
+    background-color: #262E2A;
+    font-family: 'IBM Plex Sans Condensed', sans-serif !important;
+    background-color: var(--bs-body-bg);
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 h2 {
     text-align: center;
@@ -78,7 +89,13 @@ header nav a[href="#loginpage"] {
     font-weight: 300;
     box-shadow: none;
 }
-
+.loginpanelinput{
+    display: inline-flex;
+    padding: 50px 40px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 80px;
+}
 .full-width-image {
     position: relative;
     width: 100%;
@@ -101,6 +118,21 @@ header nav a[href="#loginpage"] {
     width: 100%;
 }
 
+.altbgimg{
+    background-image: url("Login-BG.jpg");
+    height: 100%;
+    width:100%;
+}
+.paneloverlay{
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.70);
+    backdrop-filter: blur(7.5px);
+    display: inline-flex;
+    padding: 50px 40px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 80px;
+}
 .overlay {
     position: absolute;
     top: 25%;
