--- a/medconnect/stylesdraft.css
+++ b/medconnect/stylesdraft.css
@@ -126,6 +126,7 @@ header nav a[href="#loginpage"] {
 .paneloverlay{
     border-radius: 10px;
     background: rgba(0, 0, 0, 0.70);
+    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(7.5px);
     display: inline-flex;
     padding: 50px 40px;
