--- a/medconnect/stylesdraft.css
+++ b/medconnect/stylesdraft.css
@@ -9,8 +9,6 @@
     padding: 0;
 }
 body {
-    margin: 0;
-    padding: 0;
     background-color: #262E2A !important;
     font-family: 'IBM Plex Sans Condensed', sans-serif !important;
     background-color: var(--bs-body-bg);
@@ -18,8 +16,6 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .logbody {
-    margin: 0;
-    padding: 0;
     background-image: url("signinbg.jpg")!important;
     background-size: cover;
     background-color: #262E2A;
@@ -54,13 +50,13 @@ header nav {
 }
 
 header nav a {
-    margin-right: 60px; 
+    margin-right: 6vh; 
     text-decoration: none;
     color: white;
 }
 
 header nav a:hover{
-    font-weight: 600;
+    color: #39c761;
 }
 
 header nav a[href="#loginpage"] {
@@ -559,3 +555,64 @@ textarea {
 .successful{
     color: #00A72F;
 }
+
+.welcome{
+    font-size: 2vw;
+    color: #d7d7d7;
+    margin-left: 13vh;
+    margin-top: 7vh;
+}
+
+.patientRecords{
+    font-size: 1vw;
+    color: #d7d7d7;
+    margin-left: 14vh;
+    margin-top: 7vh;
+}
+
+#myInput {
+    margin-left: 65vw;
+    background-image: url('Search-Icon.svg');
+    background-repeat: no-repeat;
+    padding: 12px 30px 12px 10px;
+    background-size: 20px;
+    background-position: right 12px center;
+    margin-right: auto;
+    margin-bottom: 20px;
+    width: 300px;
+    overflow: hidden;
+}
+
+  
+  #myTable {
+    width: 88%;
+    border: 1px solid #585858;
+    font-size: 18px;
+    margin: auto;
+    border-radius: 10px;
+    background-color: #181818;
+    border-spacing: 0;
+    color: #cdcdcd;
+    overflow: hidden;
+    
+  }
+
+  #myTable th, #myTable td {
+    text-align: left;
+    padding: 12px;
+  }
+  
+  #mytable tr.header {
+    background-color: #585858;
+  }
+  .header {
+    background-color: #585858;
+  }
+.header:hover {
+    background-color: #585858;
+  }
+  #myTable tr:not(:first-child):hover {
+    background-color: #476752;
+  }
+
+  
