--- a/docs/stylesdraft.css
+++ b/docs/stylesdraft.css
@@ -673,5 +673,15 @@ textarea {
 }
   
 
-
+.output {
+    background-color: #354e3e;
+    border-radius: 10px;
+    color: #cdcdcd;
+    margin-left: 3.2vw;
+    padding-left: 20px;
+    padding-top: 10px;
+    width: 850px;
+    height: 60px;
+    border: 1px solid #bebdbd;
+  }
   
