--- a/docs/stylesdraft.css
+++ b/docs/stylesdraft.css
@@ -617,6 +617,8 @@ textarea {
     width: 456px;
     height: 100px;
     border-color: #4f4f4f;
+    overflow-y: scroll;
+    padding: 10px;
   }
 
   #fileUpload {
